# filetool

./: .gitmodules  README.md  TESTING_GUIDELINES.md  create_person_data.py  index.html  invalid.proto  jest.config.js  jest.setup.js  package-lock.json  package.json  serve.mjs  specifications.json  test.fds  test.proto  test_pb2.py  tsconfig.json
.github/workflows/: node.js.yml
archive/: build.mjs  index.html  libarchive.d.ts  main.tsx  package.json
binaryxml/: abxml-wrapper.test.ts  build.mjs  index.html  main.tsx  package.json
binaryxml/abxml-rs/: Cargo.toml
binaryxml/abxml-rs/examples/: converter.rs  exporter.rs
binaryxml/abxml-rs/src/: apk.rs  decoder.rs  encoder.rs  lib.rs  test.rs
binaryxml/abxml-rs/src/chunks/: mod.rs  package.rs  resource.rs  string_table.rs  table_type_spec.rs  xml.rs
binaryxml/abxml-rs/src/chunks/table_type/: configuration.rs  mod.rs
binaryxml/abxml-rs/src/model/: builder.rs  mod.rs  value.rs
binaryxml/abxml-rs/src/model/owned/: mod.rs  package.rs  resources.rs  string_table.rs  table_type_spec.rs
binaryxml/abxml-rs/src/model/owned/table_type/: configuration.rs  entry.rs  mod.rs
binaryxml/abxml-rs/src/model/owned/xml/: attribute.rs  namespace_end.rs  namespace_start.rs  tag_end.rs  tag_start.rs
binaryxml/abxml-rs/src/visitor/: mod.rs  model.rs  xml.rs
binaryxml/abxml-wasm-bindings/: Cargo.toml
binaryxml/abxml-wasm-bindings/src/: lib.rs
binaryxml/abxml-wrapper/: Cargo.toml
binaryxml/abxml-wrapper/src/: lib.rs
binaryxml/testdata/: sample.apk  sample.arsc
binutils/: build.mjs  index.html  main.tsx  package.json  worker.ts
browser/: build.mjs  index.html  main.tsx  package.json
cheerpj/: build.mjs  index.html  main.tsx  package.json
classfile/: build.mjs  index.html  main.tsx  package.json
classfile/classfile-wasm/: Cargo.toml
classfile/classfile-wasm/src/: annotations.rs  class.rs  generics.rs  lib.rs  method.rs  pool.rs
classyshark/: build.mjs  index.html  main.tsx  package.json
components/: ColumnView.test.tsx  ColumnView.tsx  FilePreviewer.tsx
der/: build.mjs  index.html  jest.config.js  main.tsx  package.json
der/examples/: sample.der
der/tests/: main.test.tsx
der/wasm/: go.mod  main.go
der_viewer/: build.mjs  main.tsx  package-lock.json  package.json
der_viewer/examples/: sample.pem
der_viewer/tests/: main.test.tsx
dexviewer/: build.mjs  handler.test.ts  index.html  main.tsx  package.json
esbuild-plugins/: go-wasm.mjs  package.json  rust-wasm.mjs
ffmpeg/: build.mjs  index.html  main.tsx  package.json
graphviz/: build.mjs  index.html  main.tsx  package.json
graphvizviewer/: build.mjs  index.html  main.tsx  package.json
hex_viewer/: build.mjs  hex.test.tsx  hex.ts  hex.tsx  index.html  jest.config.js  main.tsx  package.json
imagemagick/: build.mjs  imagemagick.test.ts  index.html  main.tsx  minimal_node_test.mjs  package-lock.json  package.json
jqviewer/: build.mjs  index.html  jq.worker.ts  main.tsx  node-shims.js  package.json
latex/: build.mjs  index.html  main.tsx  package-lock.json  package.json
main/: build.mjs  defaultHandlers.ts  fileitem.test.tsx  fileitem.tsx  handler_test.ts  handlers.ts  index.html  jest.config.js  main.tsx  package.json  tsconfig.json
markdown/: build.mjs  index.html  main.tsx  package-lock.json  package.json
mhtml/: build.mjs  index.html  main.tsx  package.json
protoscope/: build.mjs  go.mod  go.sum  index.html  main.go  main.tsx  package.json
protoscopeviewer/: build.mjs  go.mod  index.html  main.go  main.tsx  package.json  protoscope.wasm
rstviewer/: build.mjs  index.html  main.tsx  package-lock.json  package.json
rustdexviewer/: build.mjs  handler.test.ts  main.tsx  package.json
rustdexviewer/dexviewer/: Cargo.toml
rustdexviewer/dexviewer/src/: lib.rs  opcodes.rs
textviewer/: build.mjs  index.html  main.tsx  package.json
tools/: find_specification.py
wat_viewer/: build.mjs  index.html  main.tsx  package.json  worker.test.ts  worker.ts
webgl_previewer/: build.mjs  index.html  main.ts  package.json
(+20 files in other folders)
