[package]
name = "abxml"
version = "0.8.2"
license = "MIT/Apache-2.0"
authors = [
    "Guillem Nieto <gnieto.talo@gmail.com>",
    "Iban Eguia <razican@protonmail.ch>",
]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/abxml/"
repository = "https://github.com/SUPERAndroidAnalyzer/abxml-rs/"
homepage = "https://superanalyzer.rocks/"
description = """
Parser for resources.arsc contained on APKs and binary XML decompresser.
"""
keywords = ["android", "arsc", "apk", "parser"]
categories = ["parser-implementations", "parsing"]

[badges]
travis-ci = { repository = "SUPERAndroidAnalyzer/abxml-rs", branch = "master" }
codecov = { repository = "SUPERAndroidAnalyzer/abxml-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "SUPERAndroidAnalyzer/abxml-rs" }
is-it-maintained-open-issues = { repository = "SUPERAndroidAnalyzer/abxml-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
byteorder = "1.3.2"
ansi_term = "0.12.1"
log = "0.4.8"
env_logger = "0.11.5"
zip = { version = "2.2.0", optional = true, default-features = false, features = [
    "deflate",
    "deflate64",
] }
encoding = "0.2.33"
xml-rs = "0.8.0"
anyhow = "1.0.87"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["zip_decode"]
zip_decode = ["zip"]

[[example]]
name = "exporter"
required-features = ["zip_decode"]

[[example]]
name = "converter"
required-features = ["zip_decode"]

[lib]
path = "src/lib.rs"
