[package]
name = "abxml-wasm-bindings"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# Workaround for https://github.com/rustwasm/wasm-pack/issues/1441
wasm-opt = false

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abxml = { path = "../abxml-rs" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
serde_json = "1.0"
getrandom = { version = "0.2.15", features = ["js"] }
anyhow = "1.0.87"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
