[package]
name = "abxml-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abxml = { path = "../abxml-rs" }
wasm-bindgen = "0.2.93"
getrandom = { version = "0.2.15", features = ["js"] }
anyhow = "1.0.87"
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.15"
