[package]
name = "dexviewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
# Workaround for https://github.com/rustwasm/wasm-pack/issues/1441
wasm-opt = false

[dependencies]
log = "0.4.22"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
anyhow = "1.0.87"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.133"
serde_bytes = "0.11.15"
serde = { version = "1.0.216", features = ["derive"] }
dex = { path = "../dex-parser" }
